Update backend and frontend configurations

--- a/.env.development
+++ b/.env.development
@@ -1,58 +1,1 @@
-# 开发环境配置文件
-
-# 数据库配置
-DATABASE_URL=mysql+pymysql://instagramproject:SWaexZfEtwSTAfHp@localhost:3306/instagramproject
-
-# Redis配置
-REDIS_URL=redis://localhost:6379/0
-
-# JWT配置
-SECRET_KEY=dev-secret-key-change-in-production
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# 应用配置
-DEBUG=True
-ENVIRONMENT=development
-CORS_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000"]
-
-# Instagram API配置
-INSTAGRAM_API_TIMEOUT=30
-MAX_RETRY_ATTEMPTS=3
-RATE_LIMIT_PER_MINUTE=60
-
-# 文件上传配置
-MAX_FILE_SIZE=10485760  # 10MB
-UPLOAD_DIR=./uploads
-
-# 日志配置
-LOG_LEVEL=DEBUG
-LOG_FILE=./logs/app.log
-
-# WebSocket配置
-WS_HEARTBEAT_INTERVAL=30
-WS_MAX_CONNECTIONS=100
-
-# 调度器配置
-SCHEDULER_ENABLED=True
-MAX_CONCURRENT_TASKS=5
-TASK_TIMEOUT=300
-
-# 邮件配置（可选）
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-SMTP_FROM_EMAIL=your-email@gmail.com
-
-# 监控配置
-MONITORING_ENABLED=True
-HEALTH_CHECK_INTERVAL=60
-
-# 缓存配置
-CACHE_TTL=3600
-CACHE_MAX_SIZE=1000
-
-# 代理配置
-PROXY_ROTATION_ENABLED=False
-PROXY_HEALTH_CHECK_INTERVAL=300
+REACT_APP_API_BASE_URL=http://localhost:8000 
