--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,6 +26,19 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src/index.tsx",
+    "src/App.tsx",
+    "src/App.css",
+    "src/react-app-env.d.ts"
+  ],
+  "exclude": [
+    "src/components/**/*",
+    "src/layouts/**/*",
+    "src/pages/**/*",
+    "src/router/**/*",
+    "src/services/**/*",
+    "src/store/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
